# pdgen

./: README  pdgen.cabal
examples/: all.hs  sus-pd.hs  synth-sub.hs  synth-sweep.hs  synth.hs  synth.pd  typed1.hs
src/Language/Pd/: PdGen.hs
src/Language/Pd/PdGen/: Connectors.hs  Core.hs  Lib.hs  Out.hs  Types.hs
src/Language/Pd/PdGen/Lib/: Extra.hs  Trigger.hs
