name: pdgen
version: 0.0.1
cabal-version: >= 1.8
build-type: Simple
license: GPL
homepage: https://github.com/amosr/pdgen
category: Language
author: Amos Robinson
synopsis: bindings for generating pure data patches
 
Library
  hs-source-dirs: src
  build-depends: base, mtl, graph-rewriting, graph-rewriting-layout, AC-Vector
  exposed-modules: Language.Pd.PdGen
                   Language.Pd.PdGen.Core
                   Language.Pd.PdGen.Lib
                   Language.Pd.PdGen.Lib.Trigger
                   Language.Pd.PdGen.Out
                   Language.Pd.PdGen.Types
  extensions: TypeFamilies FlexibleInstances FlexibleContexts OverlappingInstances

Test-Suite sus-pd
  type: exitcode-stdio-1.0
  hs-source-dirs: examples
  build-depends: pdgen, base
  main-is: sus-pd.hs

Test-Suite typed1
  type: exitcode-stdio-1.0
  hs-source-dirs: examples
  build-depends: pdgen, base
  main-is: typed1.hs
  extensions: TypeFamilies FlexibleInstances FlexibleContexts OverlappingInstances
